--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     }
   </style>
   <script>
-    
-    var message1 = '안녕 내이름은'
-    var message2 = ' 무엇이야, 나이는 '
-    var age =7;
-    console.log(message1+message2+age+'살 이야'); 
-    
+   var a = 100 ;
+   var b = '100' ;
+   console.log(a == b);
+   console.log(a != b);
+   console.log(a === b);
+   console.log(a !== b);
   </script>
 </head>
 <body>
