--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     }
   </style>
   <script>
-   var a = 100 ;
-   var b = '100' ;
-   console.log(a == b);
-   console.log(a != b);
-   console.log(a === b);
-   console.log(a !== b);
+    //논리연77산자 
+    //그리고(&& 둘다 만족),또는(ll)
+   console.log( true);
+   console.log( !true);
+   console.log( !false);
+   console.log( !(100>200) );
+
   </script>
 </head>
 <body>
