--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     }
   </style>
   <script>
-    //논리연77산자 
-    //그리고(&& 둘다 만족),또는(ll)
-   console.log( true);
-   console.log( !true);
-   console.log( !false);
-   console.log( !(100>200) );
-
+     var movies = ['어벤저스','오펀', '강시', '나홀로집에 ','내부자들']
+     for (var i = 0; i< movies.length; i++){
+     console.log(movies[movies.length-1])
+     }
+  
   </script>
 </head>
 <body>
