--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>자바스크립트의 기초</title>
   <style>
-    body{
-      font-size: 2rem;
-    }
+  body {font-size: 3rem;}   
   </style>
-  <script>
-     var movies = ['어벤저스','오펀', '강시', '나홀로집에 ','내부자들']
-     for (var i = 0; i< movies.length; i++){
-     console.log(movies[movies.length-1])
-     }
   
-  </script>
 </head>
 <body>
- <h1>Java script</h1>
-      
+ <h1>Javascript</h1>
+  <h2>변수</h2>
+  
+ <script>
+ var a ;
+ console.log(a);
+ var message ="\"엄마가 그렇게 하면 안돼\"라고 하셨다"
+  
+  console.log(typeof message);
+</script>
 </body>
 </html>
