--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <h2>변수</h2>
   
  <script>
- var a ;
- console.log(a);
- var message ="\"엄마가 그렇게 하면 안돼\"라고 하셨다"
-  
-  console.log(typeof message);
-</script>
+   var movies = ['어벤저스','오펀', '강시', '나홀로집에 ','내부자들'] 
+   for(var i = 0 ; i < movies.length ; i++)
+   console.log(movies[i]);
+   console.log(movies[i]);
+ </script>
 </body>
 </html>
